5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1753_3095.log
== TEST (2019-05-16 18:32:13) 
-- CODE:
resultado = float(input("Digite o resultado :"))
while("resultado != X"):
	V = 3
	E = 2
	D = 1
	print("V")
	print("D")
	print("E")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    resultado = float(input())
ValueError: could not convert string to float: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:32:16) 
-- CODE:
resultado = float(input("Digite o resultado :"))
while("resultado != X"):
	V = 3
	E = 2
	D = 1
	print("V")
	print("D")
	print("E")

-- EXECUTION TIME:
0.333191
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3095/main.py", line 1, in <module>
    resultado = float(input())
ValueError: could not convert string to float: 'v'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:32:17) 
-- CODE:
resultado = float(input("Digite o resultado :"))
while("resultado != X"):
	V = 3
	E = 2
	D = 1
	print("V")
	print("D")
	print("E")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    resultado = float(input())
ValueError: could not convert string to float: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:36:39) 
-- CODE:
resultado = input("Digite o resultado :")
while(resultado != "X"):
	V = 3
	E = 2
	D = 1
	print("V")
	print("D")
	print("E")

-- OUTPUT:
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
E
V
D
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:39:09) 
-- CODE:
resultado = input("Digite o resultado :")
v.upper()
e.upper()
d.upper()
while(resultado != "X"):
	v.upper()
	e.upper()
	d.upper()
	V = 3
	E = 2
	D = 1
	print("V")
	print("D")
	print("E")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v.upper()
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:39:10) 
-- CODE:
resultado = input("Digite o resultado :")
v.upper()
e.upper()
d.upper()
while(resultado != "X"):
	v.upper()
	e.upper()
	d.upper()
	V = 3
	E = 2
	D = 1
	print("V")
	print("D")
	print("E")

-- EXECUTION TIME:
0.218034
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3095/main.py", line 2, in <module>
    v.upper()
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:39:10) 
-- CODE:
resultado = input("Digite o resultado :")
v.upper()
e.upper()
d.upper()
while(resultado != "X"):
	v.upper()
	e.upper()
	d.upper()
	V = 3
	E = 2
	D = 1
	print("V")
	print("D")
	print("E")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v.upper()
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:50:18) 
-- CODE:
resultado = input("Digite o resultado :")
v.upper()
e.upper()
d.upper()
soma = 0
while(resultado != "X"):
	v.upper()
	e.upper()
	d.upper()
	if(resultado == "V" ):
		soma = soma + 3
		print(resultado)
	elif(resutado == "E"):
		soma = soma + 2
		print(resultado)
	else:
		soma = soma + 1
		print(resultado)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v.upper()
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:50:20) 
-- CODE:
resultado = input("Digite o resultado :")
v.upper()
e.upper()
d.upper()
soma = 0
while(resultado != "X"):
	v.upper()
	e.upper()
	d.upper()
	if(resultado == "V" ):
		soma = soma + 3
		print(resultado)
	elif(resutado == "E"):
		soma = soma + 2
		print(resultado)
	else:
		soma = soma + 1
		print(resultado)

-- EXECUTION TIME:
0.171392
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3095/main.py", line 2, in <module>
    v.upper()
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:50:20) 
-- CODE:
resultado = input("Digite o resultado :")
v.upper()
e.upper()
d.upper()
soma = 0
while(resultado != "X"):
	v.upper()
	e.upper()
	d.upper()
	if(resultado == "V" ):
		soma = soma + 3
		print(resultado)
	elif(resutado == "E"):
		soma = soma + 2
		print(resultado)
	else:
		soma = soma + 1
		print(resultado)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v.upper()
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:51:56) 
-- CODE:
resultado = input("Digite o resultado :")
v.upper()
e.upper()
d.upper()
soma = 0
while(resultado != "X"):
	v.upper()
	e.upper()
	d.upper()
	if(resultado == "V" ):
		soma = soma + 3
		print(resultado)
	elif(resutado == "E"):
		soma = soma + 2
		print(resultado)
	else:
		soma = soma + 1
		print(resultado)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v.upper()
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:51:56) 
-- CODE:
resultado = input("Digite o resultado :")
v.upper()
e.upper()
d.upper()
soma = 0
while(resultado != "X"):
	v.upper()
	e.upper()
	d.upper()
	if(resultado == "V" ):
		soma = soma + 3
		print(resultado)
	elif(resutado == "E"):
		soma = soma + 2
		print(resultado)
	else:
		soma = soma + 1
		print(resultado)

-- EXECUTION TIME:
0.245583
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3095/main.py", line 2, in <module>
    v.upper()
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:52:17) 
-- CODE:
resultado = input("Digite o resultado :")
v.upper()
e.upper()
d.upper()
soma = 0
while(resultado != "X"):
	v.upper()
	e.upper()
	d.upper()
	if(resultado == "V" ):
		soma = soma + 3
		print(resultado)
	elif(resutado == "E"):
		soma = soma + 2
		print(resultado)
	else:
		soma = soma + 1
		print(resultado)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v.upper()
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:53:23) 
-- CODE:
resultado = input("Digite o resultado :")

soma = 0
while(resultado != "X", resultado.upper()):
	if(resultado == "V" ):
		soma = soma + 3
		print(resultado)
	elif(resutado == "E"):
		soma = soma + 2
		print(resultado)
	else:
		soma = soma + 1
		print(resultado)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif(resutado == "E"):
NameError: name 'resutado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:54:18) 
-- CODE:
resultado = input("Digite o resultado :")

soma = 0
while(resultado != "X",):
	if(resultado.upper() == "V" ):
		soma = soma + 3
		print(resultado)
	elif(resutado.upper() == "E"):
		soma = soma + 2
		print(resultado)
	else:
		soma = soma + 1
		print(resultado)

-- OUTPUT:
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:54:19) 
-- CODE:
resultado = input("Digite o resultado :")

soma = 0
while(resultado != "X",):
	if(resultado.upper() == "V" ):
		soma = soma + 3
		print(resultado)
	elif(resutado.upper() == "E"):
		soma = soma + 2
		print(resultado)
	else:
		soma = soma + 1
		print(resultado)

-- OUTPUT:
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
v
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:05:03) 
-- CODE:
resultado = input("Digite o resultado :")

soma = 0
while(resultado != "X", resultado.upper()):
	if(resultado == "V" ):
		soma = soma + 3
		print(resultado)
	elif(resutado == "E"):
		soma = soma + 2
		print(resultado)
	else:
		soma = soma + 1
		print(resultado)

-- EXECUTION TIME:
0.390431
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3095/main.py", line 8, in <module>
    elif(resutado == "E"):
NameError: name 'resutado' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:13:02) 
-- CODE:
resultado = input("Digite o resultado :")

soma = 0
while(resultado != "X",):
	if(resultado.upper() == "V" ):
		soma = soma + 3
		print(resultado)
	elif(resutado.upper() == "E"):
		soma = soma + 2
		print(resultado)
	else:
		soma = soma + 1
		print(resultado)

-- EXECUTION TIME:
703.147
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
